base scss style added, nav style update.

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 markdown: redcarpet
-baseurl: /
+baseurl:
 exclude: ['README.md']
+permalink: pretty
+sass:
+    sass_dir: _sass
+    style: compressed
